# toto-analysis

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: condition-analyzer.md  data-collector.md  odds-analyzer.md  strategy-synthesizer.md  upset-detector.md
.claude/commands/: toto-predict.md
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/mock/: toto_round_1620.json  voting_round_1620.json
reports/: round_1619_report.md  round_1620_report.md
research/: toto_ai_research_report.md
src/: main.py
src/toto/: __init__.py  config.py
src/toto/analyzers/: condition.py  odds.py  upset.py
src/toto/collectors/: __init__.py  base.py  football_lab.py  jleague.py  jleague_selenium.py  mock.py  toto_official.py  totomo.py
src/toto/models/: __init__.py  dixon_coles.py  elo.py  ensemble.py  schemas.py
src/toto/output/: __init__.py  report.py
src/toto/strategy/: __init__.py  synthesizer.py
src/toto/utils/: cache.py
tests/: test_pipeline.py
