[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "toto-analysis"
version = "0.1.0"
description = "Jリーグ toto AI予測システム"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28",
    "numpy>=2.2",
    "scipy>=1.12",
    "pandas>=2.2",
    "scikit-learn>=1.8",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "pydantic>=2.6",
    "xgboost>=3.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "penaltyblog>=1.9",
    "soccerdata>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
toto-predict = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
